<resources>
    <string name="app_name">NotPaint</string>
    <string name="option_paint_brush_size">Size</string>
    <string name="option_paint_brush_color">Colour</string>
    <string name="option_add_image">Image</string>
    <string name="option_clear_canvas">New Canvas</string>
    <string name="option_settings_canvas">Canvas Settings</string>
    <string name="option_licenses">Licenses</string>
    <string name="option_add_text">Add Text</string>
    <string name="option_draw_style">Change style</string>
    <string name="option_save_image">Save image</string>

    <string name="color_picker_transparency_label">Transparency</string>
    <string name="color_picker_lightness_label">Lightness</string>

    <string name="new_canvas_dialog_title">New Canvas?</string>
    <string name="new_canvas_dialog_message">Are you sure you want to clear the canvas?</string>
    <string name="new_canvas_dialog_image">Custom Background</string>
    <string name="new_canvas_confirmation">New Canvas Created</string>

    <string name="brush_size_label_default">Brush Size: </string>
    <string name="brush_type_label">Brush Type: </string>
    <string name="brush_square">Square </string>
    <string name="brush_butt">Butt </string>
    <string name="brush_round">Round </string>


    <string name="image_dialog_file">File</string>
    <string name="image_dialog_camera">Camera</string>
    <string name="image_dialog_internet">Internet</string>
    <string name="image_dialog_message">Where would you like to source your image from?</string>
    <string name="image_dialog_Title">Insert image</string>

    <string name="image_from_file_prompt">Insert image</string>

    <string name="style_toast">Draw mode: </string>

    <string name="internet_image_fetch_label">Please paste in the full image URL</string>
    <string name="internet_image_fetch_hint">www.image.com/124.jpg</string>
    <string name="internet_url_error">Check the URL format is correct</string>






    <string name="licenses_list">
        <![CDATA[
        <p><b>Copyright 2014-2015 QuadFlask</b></p>

        <p>Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at</p>

          <p><i> http://www.apache.org/licenses/LICENSE-2.0</i></p>

        <p>Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.</p>

        <p><b><i>Source: https://github.com/QuadFlask/colorpicker</i></b></p>

<center><p>&&&</p></center>

        <p><b>Copyright 2016 Square, Inc.</b></p>
<p>
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
</p>
   <p><b>http://www.apache.org/licenses/LICENSE-2.0</b></p>
<p>
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
<p>
<p><b><i>https://square.github.io/okhttp/</i></b></p>
        ]]>
    </string>
    <string name="title_activity_brush">BrushActivity</string>
</resources>
