<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_brush"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="devicroft.notpaint.BrushActivity">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/brush_type_label"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:text="@string/brush_square"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_square"
            android:layout_weight="1"
            android:layout_margin="20dp"/>

        <RadioButton
            android:text="@string/brush_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_round"
            android:layout_weight="1"
            android:layout_alignBaseline="@+id/select_square"
            android:layout_alignBottom="@+id/select_square"
            android:layout_alignParentEnd="true"

            android:layout_margin="20dp"/>

        <RadioButton
            android:text="@string/brush_butt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_butt"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_alignBaseline="@+id/select_square"
            android:layout_alignBottom="@+id/select_square"
            android:layout_centerHorizontal="true" />
    </LinearLayout>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="105dp"
        android:id="@+id/brush_size_seek"
        android:max="150"
        android:progress="5"
        android:elevation="0dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/brush_size_label_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/brush_size_label"
        android:layout_marginBottom="38dp"
        android:gravity="left"
        android:layout_alignBottom="@+id/brush_size_seek"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
